--- a/templates/group.html
+++ b/templates/group.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Post" />
 </form>
