--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Register" />
 </form> 
