--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "simple-base.html" %}
 
 {% block formtype %}
-	<form class="form-signin" method="post">
+<form class="form-signin" method="post">{% csrf_token %}
 		<h2 class="form-signin-heading">Please sign in</h2>
 		<input id="id_email" type="text" name="email" maxlength="40" class="input-block-level" placeholder="Email address">
 		<input id="id_password" type="password" name="password" maxlength="40" type="password" class="input-block-level" placeholder="Password">
